k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-python
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poc-python
  template:
    metadata:
      labels:
        app: poc-python
    spec:
      containers:
      - name: python-app
        image: 165304687371.dkr.ecr.us-east-1.amazonaws.com/studying/dev/backend:latest
        command: ["python", "-m", "http.server", "8000"]
        ports:
        - containerPort: 8000
