k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-service
  namespace: default
spec:
  selector:
    app: poc-python
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
