k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-ingress
  namespace: default
spec:
  rules:
    - host: poc.local
      http:
        paths:
          - path: /estudando-argocd
            pathType: Prefix
            backend:
              service:
                name: poc-service
                port:
                  number: 80
